diesel_compile_tests/tests/fail/mysql_does_not_support_group_frame_clauses.stderr
error[E0277]: `Groups` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/mysql_does_not_support_group_frame_clauses.rs:21:22
     |
  LL |         .load::<i64>(&mut connection)
     |          ----        ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql, NoGroupWindowFrameUnit>` is not implemented for `Groups`
     |          |
     |          required by a bound introduced by this call
     |
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
help: the following other types implement trait `QueryFragment<DB, SP>`
    --> DIESEL/diesel/diesel/src/expression/functions/aggregate_expressions/frame_clause.rs
     |
  LL | / simple_frame_expr_with_bound!(
  LL | |     /// Groups frame mode
  LL | |     ///
 LL | |     /// This options specifies that the offset starts/ends
...    |
 LL | |     " GROUPS "
 LL | | );
     | | ^
     | | |
     | |_`Groups` implements `QueryFragment<DB, IsoGroupWindowFrameUnit>`
     |   `Groups` implements `QueryFragment<DB>`
     = note: required for `Groups` to implement `QueryFragment<Mysql>`
     = note: 7 redundant requirements hidden
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `QueryFragment<Mysql>`
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `LoadQuery<'_, diesel::MysqlConnection, i64>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
          = note: this error originates in the macro `simple_frame_expr_with_bound` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0277`.
